<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idTxt2"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:editable="false"
        android:text="@string/txt2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxt1" />

    <TextView
        android:id="@+id/idTitle"
        android:layout_width="353dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txtTitle"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idBtnEdit"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtBtnEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxt2" />

    <EditText
        android:id="@+id/idInterval"
        android:layout_width="234dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtIntervalHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTitle" />

    <TextView
        android:id="@+id/idTxt1"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:editable="false"
        android:text="@string/txt1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idInterval" />

</androidx.constraintlayout.widget.ConstraintLayout>